Tue Dec 31 17:57:19 2002  Steve Huston  <shuston@riverace.com>

        * examples/Service_Configurator/IPC-tests/server/Handle_Thr_Stream.h:
          Add #include "ace/Svc_Handler.h"

Tue Dec 31 17:50:39 2002  Steve Huston  <shuston@riverace.com>

        * ace/OS.h: For WinCE 4 (.NET) and up, include <stddef.h> rather than
          typedef-ing ptrdiff_t.

Tue Dec 31 17:26:41 2002  Steve Huston  <shuston@riverace.com>

        * tests/tests.mpc (DLL Test Lib): Add dllflags = ACE_BUILD_SVC_DLL to
          add the correct /D option. The source uses ACE_Svc_Export to flag
          dll import/export correctly.

        * tests/CE_fostream.h: #include "ace/config-all.h" before checking for
          #if defined (ACE_HAS_WINCE).

Tue Dec 31 15:05:42 2002  Steve Huston  <shuston@riverace.com>

        * ACEXML/apps/svcconf/Svcconf.cpp: Changed the condition for when
          a dummy entrypoint is needed from AIX 4.3 to AIX and Visual Age C++
          version 5. Thanks for Jon Wackley for this adjustment. Also see:
          Fri Dec 27 19:46:31 2002  Steve Huston  <shuston@riverace.com>

        * netsvcs/clients/Naming/Client/Makefile: If building this stuff,
          reset OBJDIRS to $(VDIR) and $(VSHDIR) to clean up both.

Mon Dec 30 21:30:41 2002  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_hpux_gcc.GNU: Removed the SOVERSION=
          line to allow versions libraries to be set up properly.

        * ace/Based_Pointer_Repository.cpp:
        * ace/Dynamic.cpp:
        * ace/SString.cpp:
        * tests/Framework_Component_DLL.cpp:
        * tests/MEM_Stream_Test.cpp:
        * tests/Process_Strategy_Test.cpp:
        * tests/Timeprobe_Test.cpp:
        * apps/drwho/File_Manager.cpp:
        * examples/IPC_SAP/SOCK_SAP/CPP-inclient.cpp:
        * examples/IPC_SAP/SOCK_SAP/CPP-inserver-fancy.cpp:
        * examples/Logger/Acceptor-server/server_loggerd.cpp:
        * examples/Logger/simple-server/server_loggerd.cpp: